<resources>
    <string name="app_name">T2G</string>

    <string name="lcd_output_text">%1$s \n %2$s \n %3$s \n</string>
    <string name="lcd_console_wrong">Input number!!</string>
    <string name="lcd_console_correct">Check the console for an precise view</string>

    <string name="exampleCode">)g!ld, j(!ad \"> h>£ gdol>!o!\" o!(!c>£</string>
    <string name="infoCode">Tap on the screen\nto refresh the screen</string>
    <string name="past_the_text">Past the text</string>
    <string name="code">Encode</string>
    <string name="decode">Decode</string>

    <string name="dialogTitle">Set the time</string>
    <string name="infoCounter">Click on the screen to start the countdown,\nClick on the clocks to set the time</string>
    <string name="infoCounter2">Click on the screen to stop counters</string>
    <string name="daysCounter">days</string>
    <string name="hoursCounter">hours</string>
    <string name="minutesCounter">minutes</string>
    <string name="secondsCounter">seconds</string>
    <string name="code_breaker">Code breaker</string>
    <string name="counter">counter</string>
    <string name="lcd_display">LCD Display</string>
    <string name="wrong_input">Wrong input!!</string>
    <string name="accept">Accept</string>
    <string name="discard">Discard</string>
    <string name="days">days</string>
    <string name="image_description">View of single counter</string>
    <string name="hint_lcd_display">Input number</string>
</resources>