<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="50dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/counter"
            android:text="@string/counter"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/code"
            android:text="@string/code_breaker"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/LCD"
            android:text="@string/lcd_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>