<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    android:id="@+id/mainCode"
    tools:context=".ŁamaczKodu.CodeBreaker">

    <EditText
        android:id="@+id/input"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:autofillHints=""
        tools:ignore="LabelFor"/>

    <TextView
        android:id="@+id/output"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/consoleInfo"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:lines="2"
            android:text="@string/wrong_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/put"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:text="@string/past_the_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/code"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/mode"
            android:layout_width="60dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/decode"/>

    </LinearLayout>

</LinearLayout>